--- a/index.html
+++ b/index.html
@@ -1,4 +1,5 @@
- <!DOCTYPE html>
+<!--  test -->
+<!DOCTYPE html>
 <html>
  <head>
   <meta charset="UTF-8">
@@ -58,7 +59,7 @@
      <div id="wrapper">
        <div id="inner">
          <p id="ifYouLike"></p>
-         <a href="" id="newArtistName"></a>
+         <a href="" id="newArtistName" target="_blank"></a>
          <iframe id="spotifyIF" src="" width="300" height="380" frameborder="0" allowtransparency="true"></iframe>
        </div>
      </div>
