--- a/index.html
+++ b/index.html
@@ -60,6 +60,7 @@
          <p id="ifYouLike"></p>
          <a href="" id="newArtistName" target="_blank"></a>
          <iframe id="spotifyIF" src="" width="300" height="380" frameborder="0" allowtransparency="true"></iframe>
+         <p id="newArtist">New Artist</p>
        </div>
      </div>
 
