--- a/index.html
+++ b/index.html
@@ -66,6 +66,7 @@
 
      <div id="suggestedTracks">
        <h3>Previously Suggested Tracks</h3>
+       <button id="clear">Clear</button>
        <div id="tracks">
        </div>
      </div>
